@@ -1,3 +1,12 @@
+Wed Nov 17 17:39:41 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/be/be_visitor_dds_ts_idl.cpp:
+        * TAO_IDL/be_include/be_visitor_dds_ts_idl.h:
+
+          Changed code generation to create one output file
+          per IDL file processed. For Foo.idl, the generated
+          file is called FooTypeSupport.idl.
+
 Wed Nov 17 17:07:20 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_component/facet_svh.cpp:
